--- a/C#/Task21/Task21/Task21.csproj
+++ b/C#/Task21/Task21/Task21.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{128014C1-6C12-4E6C-9334-908B1200467E}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>Task21</RootNamespace>
     <AssemblyName>Task21</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Task21.Calculator</StartupObject>
+    <StartupObject>Task21.ConstOvrloding</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,10 +50,10 @@
     <Compile Include="Class1.cs" />
     <Compile Include="ConstOvrloding.cs" />
     <Compile Include="Instance.cs" />
+    <Compile Include="Opertor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sumofnatural.cs" />
-    <Compile Include="Ternary.cs" />
     <Compile Include="UserDisplay.cs" />
   </ItemGroup>
   <ItemGroup>
