--- a/C#/Task26/Task26/Task26.csproj
+++ b/C#/Task26/Task26/Task26.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="Dictionary.cs" />
     <Compile Include="Exception.cs" />
+    <Compile Include="Generic.cs" />
+    <Compile Include="GenericsCalc.cs" />
     <Compile Include="Hashtable.cs" />
     <Compile Include="MultiCastDeligate.cs" />
     <Compile Include="Program.cs" />
